crates/server/tests/grammar/snapshots/r#mod__grammar__alpha035__empty_string.snap
---
source: tests/grammar/alpha035.rs
expression: "compiler.tokenize(r#\"\"\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "\"",
        ),
        1..2,
    ),
]
