crates/server/tests/grammar/snapshots/r#mod__grammar__alpha035__single_char.snap
---
source: tests/grammar/alpha035.rs
expression: "compiler.tokenize(\"x\")"
---
[
    (
        Token(
            "x",
        ),
        0..1,
    ),
]
