crates/server/tests/grammar/snapshots/r#mod__grammar__alpha035__string_multi_interpolation.snap
---
source: tests/grammar/alpha035.rs
expression: "compiler.tokenize(r#\"\"{a} and {b} and {c}\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "{",
        ),
        1..2,
    ),
    (
        Token(
            "a",
        ),
        2..3,
    ),
    (
        Token(
            "}",
        ),
        3..4,
    ),
    (
        Token(
            " and ",
        ),
        4..9,
    ),
    (
        Token(
            "{",
        ),
        9..10,
    ),
    (
        Token(
            "b",
        ),
        10..11,
    ),
    (
        Token(
            "}",
        ),
        11..12,
    ),
    (
        Token(
            " and ",
        ),
        12..17,
    ),
    (
        Token(
            "{",
        ),
        17..18,
    ),
    (
        Token(
            "c",
        ),
        18..19,
    ),
    (
        Token(
            "}",
        ),
        19..20,
    ),
    (
        Token(
            "\"",
        ),
        20..21,
    ),
]
