crates/server/tests/grammar/snapshots/r#mod__grammar__alpha035__triple_dollar.snap
---
source: tests/grammar/alpha035.rs
expression: "compiler.tokenize(\"$$$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "$",
        ),
        1..2,
    ),
    (
        Token(
            "$",
        ),
        2..3,
    ),
]
